--- a/views/postArecipe.handlebars
+++ b/views/postArecipe.handlebars
@@ -38,7 +38,7 @@
     </label>
     <br><br>
     <label>
-        <input type="submit" value="Submit Recipe">
+        <input type="submit" value="Submit Recipe" id="submit2">
     </label>
     <br>
 </form>
