--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -38,7 +38,7 @@
     <textarea id="description" placeholder="Enter Description" name="description"></textarea>
     </label>
     <br><br>
-    <button type="submit" value="Submit">Submit</button>
+    <button type="submit" value="Submit" id="submit3">Submit</button>
     </form>
     <br><br>
     <div id="errorcheck">
