--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -22,10 +22,10 @@
     </label>
     <br><br>
     <label>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" id="submit">
     </label>
     <label>
-        <button type="reset" value="reset">Clear Form</button>
+        <button type="reset" value="reset" id="reset">Clear Form</button>
     </label>
     <br>
     </form>
