--- a/views/loggedIn.handlebars
+++ b/views/loggedIn.handlebars
@@ -6,7 +6,7 @@
             <input type="text" id="searchTerm" name="searchTerm" placeholder="Search A Recipe">
         </label>
         <label>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" id="submit1">
         </label>
         <br><br>
     </form>
@@ -23,9 +23,9 @@
     </label>
     <br><br>
     <br><br>
-    <button onclick="window.location.href='recipe/sortByDietaryTags'">SORT BY DIETARY TAGS</button>
+    <button onclick="window.location.href='recipe/sortByDietaryTags'" id="buttonForDtags">SORT BY DIETARY TAGS</button>
     <br><br>
-    <button onclick="window.location.href='recipe/sortedCuisine'">SORT BY CUISINE</button>
+    <button onclick="window.location.href='recipe/sortedCuisine'" id="buttonForCuisine">SORT BY CUISINE</button>
     <br><br>
     <button id='sortLikesButton'>SORT BY LIKES</button>
     <button  id='defaultSortButton' hidden>SORT BY POST DATE</button>
