--- a/views/users/myPage.handlebars
+++ b/views/users/myPage.handlebars
@@ -78,7 +78,7 @@
         <input type="text" id="favoriteRecipe" name="favoriteRecipe" placeholder="What is your favorite recipe...">
         <br>
         <br>
-        <input type="submit" value="Submit" >
+        <input type="submit" value="Submit"  id="submit5">
         </form>
         <div id="errorcheck">
             {{#if error}}
