--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,7 @@
 <div>
     <h1>Welcome back,FOODIE. Please Login</h1>
-    <form action="/login" method="post" id="login-form">
+    <form action="/login" method="post" id="login-form">LOGIN
+    <br><br>
     <label>
         <input type="text" placeholder="Enter Your Username Here" id="username" name="username">
     </label>
