--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,7 @@
 <div>
     <h1>We are pleased to see you join FOODGRAM</h1>
-    <form action="/signup" method="post" id="signup-form">
+    <form action="/signup" method="post" id="signup-form">SIGNUP
+    <br><br>
     <label>
         <input type="text" placeholder="Enter Your First Name" id="firstname" name="firstName">
     </label>
