--- a/views/postArecipe.handlebars
+++ b/views/postArecipe.handlebars
@@ -1,5 +1,6 @@
 <h1>Cooked something new? Share with our users.</h1>
-<form action="/recipe/postArecipe" method="POST" id="post-a-recipe-form" enctype="multipart/form-data">
+<form action="/recipe/postArecipe" method="POST" id="post-a-recipe-form" enctype="multipart/form-data">POST A RECIPE
+    <br><br>
     <label for="recipeName">Enter a Recipe Name:</label>
     <input type="text" placeholder="Enter the Recipe Name Here" id="recipeName" name="recipeName" > 
     <br><br>
