--- a/views/sortedDietaryTags.handlebars
+++ b/views/sortedDietaryTags.handlebars
@@ -1,5 +1,5 @@
 <div>
-<form action="/recipe/sortByDietaryTags" method="post">
+<form action="/recipe/sortByDietaryTags" method="post" id="formForSortByDietaryTags">
     <label >Sort by Dietary Tag</label>
     <br><br>
     <select id="dietarytags" name="dietarytags">
@@ -8,7 +8,7 @@
         <option value="nonvegetarian">Non-Vegetarian</option>
     </select>
     <label>
-        <input type="submit" value="Submit Option">
+        <input type="submit" value="Submit Option" id="submit7">
     </label>
 </form>
 </div>
@@ -19,7 +19,7 @@
 </div>
 <div>
 {{#each sortDT}}
- <ul class='recipeDisplay'>
+<ul class='recipeDisplay'>
         <li class='recipeList'> 
             <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
             <div class="recipeContent">
