--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -28,13 +28,16 @@
 
 <div>
     <form id="formForComment" method="post" action="/recipe/comments">Comment On This Recipe
+    <br>
     <input type="hidden" name="recipeId" id="recipeid" value="{{a._id}}">
+    <br>
+    <label for="subject">Enter Comment Subject
     <br><br>
-    <label for="subject">Enter Comment Subject Here
     <input type="text" placeholder="Enter Subject Line" id="subject" name="subject">
     </label>
     <br><br>
-    <label for="description" > Enter Comment Description Here
+    <label for="description" > Enter Comment Description
+        <br><br>
     <textarea id="description" placeholder="Enter Description" name="description"></textarea>
     </label>
     <br><br>
