--- a/views/loggedIn.handlebars
+++ b/views/loggedIn.handlebars
@@ -39,7 +39,7 @@
             <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
             <div class="recipeContent">
             <a href="/recipe/post/{{_id}}">{{recipeName}}</a>
-            <p>Created By <a href='/users/profile/{{posterId}}'>{{posterUsername}}</a></p>
+            <p>Created By @<a href='/users/profile/{{posterId}}'>{{posterUsername}}</a></p>
             </div>
         </li>
     </ul>
@@ -49,7 +49,7 @@
     <div id='likeSort' hidden>
     {{#if sortByLikes}}
     {{#each sortByLikes}}
-     <ul class='recipeDisplay'>
+    <ul class='recipeDisplay'>
         <li class='recipeList'> 
             <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
             <div class="recipeContent">
