--- a/views/users/userpage.handlebars
+++ b/views/users/userpage.handlebars
@@ -20,7 +20,7 @@
         <h2>Posted Recipes</h2>
         <div class='table'>
         <ul class='recipeDisplay'>
-                {{#each user.recipes}}
+                {{#each recipes}}
                      <li class='recipeList'> 
                     <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
                     <div class="recipeContent">
@@ -45,9 +45,9 @@
         <br>
         <br>
         <h2>Liked Recipes:</h2>
-        </div class='table'>
+        <div class='table'>
         <ul class='recipeDisplay'>
-                {{#each user.likes}}
+                {{#each likes}}
                     <li class='recipeList'> 
                     <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
                     <div class="recipeContent">
